--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,52 @@ body {
   height: 100vh;
 }
 
+input,
+label,
+button
+{
+	margin:0;
+	border:0;
+	padding:0;
+	display:inline-block;
+	vertical-align:middle;
+	white-space:normal;
+	background:none;
+	line-height:1;
+
+}
+
+/* All of our custom controls should be what we expect them to be */
+input
+{
+	-webkit-box-sizing:content-box;
+	-moz-box-sizing:content-box;
+	box-sizing:content-box;
+}
+
+/* These elements are usually rendered a certain way by the browser */
+button,
+input[type=reset],
+input[type=button],
+input[type=submit],
+input[type=checkbox],
+input[type=radio],
+select
+{
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
+}
+
+
+input[type="submit"]
+{
+	/* Fix IE7 display bug */
+	overflow:visible;
+	width:auto;
+}
+
+
 .flex {
   display: flex;
 }
@@ -67,6 +113,14 @@ body {
   color: #1f2c32;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 25px;
+
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -116,17 +170,36 @@ gap: 25px;
   gap: 10px;
 }
 
+.form-labels label {
+  font-weight: 400;
+font-size: 20px;
+letter-spacing: 0.1em;
+
+color: #1F2C32;
+}
+
 .form-row input {
   background: #d3c0af;
   border: 1px solid rgba(31, 44, 50, 0.3);
   border-radius: 5px;
   width: 344px;
   height: 45px;
+  font-weight: 400;
+font-size: 23px;
+padding: 1px 6px;
 }
+.form-row input:focus {
+  outline:0;
+  border: 1px solid #1D728E;
+box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+
 
 .form-container {
   align-self: center;
   height: 533px;
+  
 }
 
 .signup-btn {
@@ -134,12 +207,13 @@ gap: 25px;
   height: 58px;
   background: #4f6563;
   border-radius: 10px;
-
+  padding: 10px 34px;
   font-style: normal;
   font-weight: 400;
   font-size: 25px;
   color: #fcdcdc;
   margin-bottom: 27px;
+  cursor: pointer;
 }
 
 .container-btn {
